// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EzTable should render with default styles 1`] = `
.recipe-18 {
  margin: 0;
  line-height: 1.5rem;
  border-collapse: collapse;
  width: 100%;
}

.recipe-18 th,
.recipe-18 td {
  border: none;
}

.recipe-6 {
  text-align: left;
  padding: 0.8571428571428571rem 0.5714285714285714rem;
}

.recipe-0 {
  text-align: left;
  padding: 0.8571428571428571rem 0.5714285714285714rem;
  color: #8b99a6;
}

.recipe-8 {
  text-align: right;
  padding: 0.8571428571428571rem 0.5714285714285714rem;
}

.recipe-2 {
  text-align: right;
  padding: 0.8571428571428571rem 0.5714285714285714rem;
  color: #8b99a6;
}

<table
  className="recipe-18 recipe-19"
>
  <thead>
    <tr>
      <th
        className="recipe-0 recipe-1"
      >
        Store name
      </th>
      <th
        className="recipe-2 recipe-1"
      >
        Total sales
      </th>
      <th
        className="recipe-2 recipe-1"
      >
        Average order value
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td
        className="recipe-6 recipe-7"
      >
        123 Example Store
      </td>
      <td
        className="recipe-8 recipe-7"
      >
        23267
      </td>
      <td
        className="recipe-8 recipe-7"
      >
        327.79
      </td>
    </tr>
    <tr>
      <td
        className="recipe-6 recipe-7"
      >
        45 Meadowview Lane
      </td>
      <td
        className="recipe-8 recipe-7"
      >
        22788
      </td>
      <td
        className="recipe-8 recipe-7"
      >
        367.55
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`EzTable should render with full bleed styles 1`] = `
.recipe-22 {
  margin: 0;
  line-height: 1.5rem;
  border-collapse: collapse;
  width: 100%;
}

.recipe-22 th,
.recipe-22 td {
  border: none;
}

.recipe-10 {
  text-align: left;
  padding: 0.8571428571428571rem 0.5714285714285714rem;
}

.recipe-4 {
  text-align: left;
  padding: 0.8571428571428571rem 0.5714285714285714rem;
  color: #8b99a6;
}

.recipe-12 {
  text-align: right;
  padding: 0.8571428571428571rem 0.5714285714285714rem;
}

.recipe-6 {
  text-align: right;
  padding: 0.8571428571428571rem 0.5714285714285714rem;
  color: #8b99a6;
}

.recipe-28 {
  background: #ffffff;
  border: 1px solid #ced4d9;
  border-radius: 6px;
}

.recipe-2 {
  margin: 1.4285714285714286rem 1.4285714285714286rem 0;
}

.recipe-0 {
  font-size: 1.2857142857142858rem;
  margin: 0;
}

.recipe-26 > *:not(:first-child) {
  border-top: 1px solid #ced4d9;
}

.recipe-24 {
  padding: 1.4285714285714286rem;
  padding: 0;
}

.recipe-24 > *:not(:first-child) {
  margin-top: 1.1428571428571428rem;
}

.recipe-24 th:first-child,
.recipe-24 td:first-child {
  padding-left: 1.4285714285714286rem;
}

.recipe-24 th:last-child,
.recipe-24 td:last-child {
  padding-right: 1.4285714285714286rem;
}

.recipe-24 th,
.recipe-24 td {
  border-bottom: 1px solid #e6e9eb;
}

.recipe-24 tr:last-child td {
  border-bottom: none;
}

<div
  className="recipe-28 recipe-29"
>
  <div
    className="recipe-2 recipe-3"
  >
    <h3
      className="recipe-0 recipe-1"
    >
      My Table
    </h3>
  </div>
  <div
    className="recipe-26 recipe-27"
  >
    <div
      className="recipe-24 recipe-25"
    >
      <table
        className="recipe-22 recipe-23"
      >
        <thead>
          <tr>
            <th
              className="recipe-4 recipe-5"
            >
              Store name
            </th>
            <th
              className="recipe-6 recipe-5"
            >
              Total sales
            </th>
            <th
              className="recipe-6 recipe-5"
            >
              Average order value
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              className="recipe-10 recipe-11"
            >
              123 Example Store
            </td>
            <td
              className="recipe-12 recipe-11"
            >
              23267
            </td>
            <td
              className="recipe-12 recipe-11"
            >
              327.79
            </td>
          </tr>
          <tr>
            <td
              className="recipe-10 recipe-11"
            >
              45 Meadowview Lane
            </td>
            <td
              className="recipe-12 recipe-11"
            >
              22788
            </td>
            <td
              className="recipe-12 recipe-11"
            >
              367.55
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;
